NXP-28565: Add skipCount and mergeResult to BulkStatus